--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "discord-api-types": "^0.37.74",
     "discord.js": "^14.14.1",
     "dotenv": "^16.4.5",
+    "node-fetch": "^3.3.2",
     "node-html-parser": "^6.1.12"
   }
 }
