--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@spotify/web-api-ts-sdk": "^1.2.0",
+    "date-fns": "^3.6.0",
     "discord-api-types": "^0.37.74",
     "discord.js": "^14.14.1",
     "dotenv": "^16.4.5",
